fix: fix app container width on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -492,6 +492,10 @@ button {
   .card-name-overlay {
     font-size: 0.7em;
   }
+
+  .app-container {
+    max-width: 90vw;
+  }
 }
 
 @media (min-width: 601px) and (max-width: 900px) {
